Fixed blurry portrait

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     image-rendering: optimizeSpeed;
     image-rendering: -moz-crisp-edges;
     image-rendering: -o-crisp-edges;
+    image-rendering: crisp-edges;
     image-rendering: -webkit-optimize-contrast;
     image-rendering: pixelated;
     image-rendering: optimize-contrast;
@@ -49,6 +50,7 @@ p {
     color: white;
     font-size: 30px;
     line-height: 1.25;
+    font-weight: 300;
 }
 
 h1 {
